--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   <h2>運営委託先会社</h2>
   <p>
     会社名: TRUST AGENCY株式会社<br>
-    代表者: 代表取締役登<br>
+    代表者: 代表取締役 登坂　泰紀<br>
     所在地: 〒064-0805 札幌市中央区南5条西2丁目1番地4<br>
     TEL: 011-206-4612 FAX: 011-351-5830<br>
     E-mail: info@trust-agency.jp<br><br>
