--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <li>20歳未満の方のご利用はお断りしております。</li>
     <li>反社会的勢力に該当する方、その他明らかにモラルに反すると当施設が判断した方のご利用はお断りしております。</li>
     <li>以下へのキャストの出張はお断りしております。
-        <p>ご自宅、ホテルの室、お車など鍵のかかる密閉空間</p>
+        <p>ご自宅、ホテルの一室、お車など鍵のかかる密閉空間</p>
         <p>マンガ喫茶やネットカフェなどの個室</p>
         <p>キャバクラやハプニングバーなどの店舗</p>
     </li>
