--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
   <p>お客様には、キャスト個人の情報を本人の同意を得ることなく、第三者およびインターネット上に提供または転載・開示しないようお願いしております。</p>
 
   <h2>禁止事項について</h2>
+  <p>本サービスの利用に際して、お客様に対し次の各号の行為をおこなうことを禁止します。</p>
   <ol>
-    <li>本サービスの利用に際して、お客様に対し次の各号の行為をおこなうことを禁止します。</li>
     <li>過度のボディタッチを含むピンクサービスおよび風俗的なご要望。</li>
     <li>過度のアルコール摂取やキャストへの飲酒・喫煙の強要。</li>
     <li>キャストに精神的なダメージを与える行為(暴言・罵倒・脅しや無断で私物に触れるなど)。</li>
