--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </li>
     <li>泥酔、薬物中毒、またはそれに近い状態でのご利用はお断りしております。</li>
     <li>ご予約は2名60分〜ご利用いただけます。スペシャルクラブ内では1名60分〜ご利用いただけます。</li>
-    <li>ご予約は基本3日前からとさせていただきますが、当日のご予約もお気軽にお問い合わせ下さい。当日注文の場合、稼働状況によってキャストが集まらない場合もございますが、ご了承ください。その際のキャンセル料は発生しません。プライスリストは別紙参照。</li>
+    <li>ご予約は基本3日前からとさせていただきますが、当日のご予約もお気軽にお問い合わせ下さい。当日注文の場合、稼働状況によってキャストが集まらない場合もございますが、ご了承ください。その際のキャンセル料は発生しません。<br>プライスリストは別紙参照。</li>
     <li>お客様のご都合により会場へのご到着が遅れた場合は、当初のご依頼通りのお時間がスタートします。ただしキャストが遅れた場合、キャストが揃ってからスタートさせていただきます。</li>
     <li>延長をご希望される場合は、スペシャルクラブ内で、次の予約が入っていない状況に限り初回の延長の確認以降、30分単位の自動延長となります。23:30以降のご利用時は、キャストの交通費として5,500円のご負担をお願いしております。</li>
     <li>スペシャルクラブの営業終了後(25時以降)に店外にて、サービス利用の場合もキャストがいる限り料金は通常通り発生致します。</li>
