--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
   <h2>サービス提供内容について</h2>
   <ol>
     <li>20歳未満の方のご利用はお断りしております。</li>
-    <li>反社会的勢力に該当する方、その他明らかにモラルに反すると当施設が判断した方のご利用はお断りしております。</li>
+    <li>反社会的勢力(暴力団、暴力団員、暴力団員でなくなった時から5年を経過しない者、暴力団準構成員、暴力団
+関係企業、総会屋、政治活動・宗教活動・社会運動標ぼうゴロ、特殊知能暴力集団等その他のこれらに準ずる
+者)に該当する方、その他明らかにモラルに反すると当施設が判断した方のご利用はお断りしております。</li>
     <li>以下へのキャストの出張はお断りしております。
         <p>ご自宅、ホテルの一室、お車など鍵のかかる密閉空間</p>
         <p>マンガ喫茶やネットカフェなどの個室</p>
