--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
   </ol>
 
   <h2>サービスのキャンセルについて</h2>
-  <p>キャストの手配が完了し、マッチング完了となって以降のキャンセルの場合に限り、サービス前日の場合は料金の50%、サービス当日の場合は料金の100%をお支払いいただきます。キャンセル料に関しては、前日、当日のキャンセルの場合でもキャスト手配が完了していない場合のキャンセル料は発生しません。<br>※キャンセルの際はお早めにご連絡下さい。</p>
+  <p>キャストの手配が完了し、マッチング完了となって以降のキャンセルの場合に限り、サービス前日の場合は料金の50%、サービス当日の場合は料金の100%をお支払いいただきます。<br>キャンセル料に関しては、前日、当日のキャンセルの場合でもキャスト手配が完了していない場合のキャンセル料は発生しません。<br>※キャンセルの際はお早めにご連絡下さい。</p>
 
   <h2>個人情報に関する取り扱いについて</h2>
   <p>お客様には、キャスト個人の情報を本人の同意を得ることなく、第三者およびインターネット上に提供または転載・開示しないようお願いしております。</p>
