--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
   <ol>
     <li>過度のボディタッチを含むピンクサービスおよび風俗的なご要望。</li>
     <li>過度のアルコール摂取やキャストへの飲酒・喫煙の強要。</li>
+    <li>連絡先交換禁止。</li>
     <li>キャストに精神的なダメージを与える行為(暴言・罵倒・脅しや無断で私物に触れるなど)。</li>
     <li>キャストへの勧誘、引き抜き、プライベートのお誘い、ストーカー行為。</li>
     <li>ご延長の意思がないのにサービスを引き延ばしたり個人的なサービス延長交渉。</li>
